--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <li>git clone *путь к репозиторию*</li>
         <li>git status - cтатуы текущего локального репозитория </li>
         <li>git add *имя файла*</li>
-        <li>git comit -am "added new file index.html </li>
+        <li>git commit -am "added new file index.html" - зафиксировать изменения в файле</li>
+        <li>git push - отправляем содержимое папки на гит</li>
+        <li>git pull - принимаем новые файлы</li>
         <li></li>
+        <li></li>
+
     </ui>
 </div>
